--- a/WTO/Views/Partial/Dashboard/DashboardProcessingStatus.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardProcessingStatus.cshtml
@@ -248,7 +248,7 @@
                                             }
                                             else
                                             {
-                                                <div class="col-xs-8 col-sm-8"><p>Meeting not planned</p></div>
+                                                <div class="col-xs-8 col-sm-8"><p>To be planned</p></div>
                                                 <div class="col-xs-4 col-sm-4 text-right processingcount"><p>0</p></div>
                                             }
                                         }
